--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -52,70 +52,61 @@ MathJax.Hub.Config({
 <h1>Research Grants</h1>
 <div id="subtitle"></div>
 </div>
-<p><div id="Current Grants"></p>
-<h2>Current Grants</h2>
-<ul>
-<li><p><b>Enterprise Ireland's ERC Funding Support</b> (€15,982), Apr. 2023 - Apr. 2025 <br /> 
+<div id="text-img-container"><div id="img-container">
+<img src="./images/sponsors/Enterprise_Ireland.jpg" alt="" width="250px" /></div>
+<div id="text-container"><p><b>Enterprise Ireland's ERC Funding Support</b> (€15,982), Apr. 2023 - Apr. 2025 <br /> 
 Principal Investigator. Project EC20231518 <br /> 
-Title: &ldquo;Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning&rdquo;
-</p>
-</li>
-<li><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
+Title: Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning</p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/sponsors/Nazarbayev_University.png" alt="" width="250px" /></div>
+<div id="text-container"><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
 Co-Principal Investigator. Grant No. 11022021FD2925 <br /> 
-Title: &ldquo;Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance&rdquo;</p>
-</li>
-</ul>
-<p></div>
-</p>
-<p><div id="Past Grants"></p>
-<h2>Past Grants</h2>
-<ul>
+Title: Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance</p>
+</div></div>
+<h1>Past Grants</h1>
+<p></p>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/sponsors/NRF_logo.png" alt="" width="250px" /></div>
+<div id="text-container"><ul>
 <li><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
 Principal Investigator. Grant NRF-2019R1C1C1006143 <br /> 
-Title: &ldquo;Privacy Enhancing Connected Cars in 5G and Beyond&rdquo;
-</p>
+Title: Privacy Enhancing Connected Cars in 5G and Beyond</p>
 </li>
+</ul>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/sponsors/NRF_logo.png" alt="" width="250px" /></div>
+<div id="text-container"><ul>
 <li><p><b>NRF Basic Science and Research</b> (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
 Key Participant. Grant NRF-2019R1I1A3A01060518 <br /> 
-Title: &ldquo;Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications&rdquo;
-</p>
+Title: Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications</p>
 </li>
+</ul>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/sponsors/NRF_logo.png" alt="" width="250px" /></div>
+<div id="text-container"><ul>
 <li><p><b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW/year, 2018-2019) <br /> 
 Key Participant. Grant NRF-2018K2A9A1A01090540 <br />
-Title: &ldquo;Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks&rdquo;
-</p>
+Title: Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks</p>
 </li>
+</ul>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/sponsors/BK21_logo.jpg" alt="" width="250px" /></div>
+<div id="text-container"><ul>
 <li><p><b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
 Participant, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
 Pusan National University</p>
 </li>
 </ul>
-<p></div>
-</p>
-<p><div id="Sponsors"></p>
-<h2>Sponsors</h2>
-<p></p>
-<p>
-<div id="Sponsors-container">
-<div id="Sponsor">
-<img src="images/sponsors/Enterprise<u>Ireland.jpg" style="width:250px">
-<img src="images/sponsors/Trinity</u>Main<u>Logo.jpg" style="width:250px">
-<img src="images/sponsors/Advance</u>CRT<u>Logo.jpeg" style="width:250px">   
-</div>
-<div id="Sponsor">
-<img src="images/sponsors/NRF</u>logo.png" style="width:250px"> 
-<img src="images/sponsors/BK21<u>logo.jpg" style="width:250px">    
-<img src="images/sponsors/Nazarbayev</u>University.png" style="width:250px">    
-</div>
-</div>
-
-</p>
-<p></div></p>
+</div></div>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  05:19PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  06:12PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
