--- a/grantaward.html
+++ b/grantaward.html
@@ -73,16 +73,19 @@ Title: &ldquo;Privacy Enhancing Connected Cars in 5G and Beyond&rdquo;
 <li><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
 Co-Principal Investigator. Grant No. 11022021FD2925 <br /> 
 Title: &ldquo;Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance&rdquo;
-
-- <b>NRF Basic Science and Research</b> (100,000,000 KRW<i>year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
+</p>
+</li>
+<li><p><b>NRF Basic Science and Research</b> (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
 Key Participant. Grant NRF-2019R1I1A3A01060518 <br /> 
 Title: &ldquo;Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications&rdquo;
-
-- <b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW</i>year, 2018-2019) <br /> 
+</p>
+</li>
+<li><p><b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW/year, 2018-2019) <br /> 
 Key Participant. Grant NRF-2018K2A9A1A01090540 <br />
 Title: &ldquo;Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks&rdquo;
-
-- <b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
+</p>
+</li>
+<li><p><b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
 Participant, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
 Pusan National University</p>
 </li>
@@ -119,7 +122,7 @@ Pusan National University</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  08:03PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
