Update the group's website

--- a/COIN/team.html
+++ b/COIN/team.html
@@ -38,7 +38,6 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
 <div class="menu-item"><a href="home.html">Home</a></div>
 <div class="menu-item"><a href="team.html" class="current">Team&nbsp;Members</a></div>
-<div class="menu-category">Research</div>
 <div class="menu-item"><a href="../publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
@@ -56,7 +55,7 @@ MathJax.Hub.Config({
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/Portrait_Viet.jpg" alt="profile pic" width="150px" /></div>
 <div id="text-container"><p><div id="PI">
-<b>Viet Quoc Pham</b>, Ph.D.</p>
+<a href="https://www.scss.tcd.ie/viet.pham" target=&ldquo;blank&rdquo;><b>Viet Quoc Pham</b></a>, Ph.D.</p>
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
@@ -80,7 +79,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/linh.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Linh Thanh Nguyen</b></p>
+<a href="https://linhnt31.github.io/" target=&ldquo;blank&rdquo;><b>Linh Thanh Nguyen</b></a> (Nguyễn Thành Linh)</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/09 - Present.</p>
 </li>
@@ -92,7 +91,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/tuan.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Tuan Van Tran</b></p>
+<a href="https://vantuan5644.github.io/" target=&ldquo;blank&rdquo;><b>Tuan Van Tran</b></a> (Trần Văn Tuấn)</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/09 - Present.</p>
 </li>
@@ -104,7 +103,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/mengyan.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Mengyan Huang</b></p>
+<b>Mengyan Huang</b> (黄梦延)</p>
 <ul>
 <li><p>PhD Student, Xidian University, 2021/09 &ndash; Present.</p>
 </li>
@@ -118,7 +117,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/hoc.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Vu Thai Hoc</b> </p>
+<a href="https://scholar.google.com.vn/citations?user=qUIEy3sAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Vu Thai Hoc</b></a> (Vũ Thái Học)</p>
 <ul>
 <li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do" target=&ldquo;blank&rdquo;>University of Ulsan</a>, 2021/03 - Present.</p>
 </li>
@@ -132,7 +131,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/mai.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Le Thi Mai</b> </p>
+<a href="https://scholar.google.com.vn/citations?user=Y776EGYAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Le Thi Mai</b></a> (Lê Thị Mai)</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2021/03 - Present.</p>
 </li>
@@ -148,7 +147,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/thanh.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Dao Thien Thanh</b> </p>
+<b>Dao Thien Thanh</b> (Đào Thiện Thành)</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
@@ -162,7 +161,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/duong.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Nguyen Minh Duong</b> </p>
+<a href="https://scholar.google.com/citations?user=3ea0RLkAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Nguyen Minh Duong</b></a> (Nguyễn Minh Dương)</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
@@ -176,7 +175,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/daeil.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Daeil Noh</b></p>
+<b>Daeil Noh</b> (노대일)</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
@@ -190,7 +189,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/sangmin.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Sang Min Lee</b> </p>
+<b>Sang Min Lee</b> (이상민)</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
@@ -262,7 +261,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  05:19PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  08:27PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
