--- a/COIN/contact.html
+++ b/COIN/contact.html
@@ -38,7 +38,6 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
 <div class="menu-item"><a href="home.html">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
-<div class="menu-category">Research</div>
 <div class="menu-item"><a href="../publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
@@ -55,7 +54,7 @@ MathJax.Hub.Config({
 <p><div id="Principal Investigator"></p>
 <h2>Principal Investigator</h2>
 <ul>
-<li><p><a href="../index.html" target=&ldquo;blank&rdquo;>Dr. Viet Quoc Pham</a></p>
+<li><p><a href="..\index.html" target=&ldquo;blank&rdquo;>Dr. Viet Quoc Pham</a></p>
 </li>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
@@ -70,7 +69,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  05:19PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  08:12PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
