--- a/grantaward.html
+++ b/grantaward.html
@@ -60,33 +60,33 @@ MathJax.Hub.Config({
 <p><div id="Grants"></p>
 <h2>Grants</h2>
 <ul>
-<li><p><b>Enterprise Ireland's ERC Funding Support</b> (€15,982), Apr. 2023 - Apr. 2025 <br /> 
-Principal Investigator. Project EC20231518 <br /> 
+<li><p>Enterprise Ireland's ERC Funding Support (€15,982), Apr. 2023 - Apr. 2025 <br /> 
+<b>Principal Investigator</b>. Project EC20231518 <br /> 
 Title: Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning
 </p>
 </li>
-<li><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
-Principal Investigator. Grant NRF-2019R1C1C1006143 <br /> 
+<li><p>NRF Basic Science and Research (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
+<b>Principal Investigator</b>. Grant NRF-2019R1C1C1006143 <br /> 
 Title: Privacy Enhancing Connected Cars in 5G and Beyond
 </p>
 </li>
-<li><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
-Co-Principal Investigator. Grant No. 11022021FD2925 <br /> 
+<li><p>FDCRGP Grant ($136,000), Jan. 2022 - Dec. 2024 <br />
+<b>Co-Principal Investigator</b>. Grant No. 11022021FD2925 <br /> 
 Title: Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance
 </p>
 </li>
-<li><p><b>NRF Basic Science and Research</b> (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
-Key Participant. Grant NRF-2019R1I1A3A01060518 <br /> 
+<li><p>NRF Basic Science and Research (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
+<b>Key Participant</b>. Grant NRF-2019R1I1A3A01060518 <br /> 
 Title: Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications
 </p>
 </li>
-<li><p><b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW/year, 2018-2019) <br /> 
-Key Participant. Grant NRF-2018K2A9A1A01090540 <br />
+<li><p>NRF Korea-Australia Research Promotion (25,000,000 KRW/year, 2018-2019) <br /> 
+<b>Key Participant</b>. Grant NRF-2018K2A9A1A01090540 <br />
 Title: Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks
 </p>
 </li>
-<li><p><b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
-Participant, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
+<li><p>Brain Korea 21 PLUS (BK21 Plus) (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
+<b>Key Participant</b>, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
 Pusan National University</p>
 </li>
 </ul>
@@ -122,7 +122,7 @@ Pusan National University</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  08:06PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  08:09PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
