--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -67,45 +67,33 @@ Title: Edge-assisted Activity Recognition using Skeletal Representation and Deep
 <p></p>
 <div id="text-img-container"><div id="img-container">
 <img src="./images/sponsors/NRF_logo.png" alt="" width="250px" /></div>
-<div id="text-container"><ul>
-<li><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
+<div id="text-container"><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
 Principal Investigator. Grant NRF-2019R1C1C1006143 <br /> 
 Title: Privacy Enhancing Connected Cars in 5G and Beyond</p>
-</li>
-</ul>
 </div></div>
 <div id="text-img-container"><div id="img-container">
 <img src="./images/sponsors/NRF_logo.png" alt="" width="250px" /></div>
-<div id="text-container"><ul>
-<li><p><b>NRF Basic Science and Research</b> (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
+<div id="text-container"><p><b>NRF Basic Science and Research</b> (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
 Key Participant. Grant NRF-2019R1I1A3A01060518 <br /> 
 Title: Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications</p>
-</li>
-</ul>
 </div></div>
 <div id="text-img-container"><div id="img-container">
 <img src="./images/sponsors/NRF_logo.png" alt="" width="250px" /></div>
-<div id="text-container"><ul>
-<li><p><b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW/year, 2018-2019) <br /> 
+<div id="text-container"><p><b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW/year, 2018-2019) <br /> 
 Key Participant. Grant NRF-2018K2A9A1A01090540 <br />
 Title: Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks</p>
-</li>
-</ul>
 </div></div>
 <div id="text-img-container"><div id="img-container">
 <img src="./images/sponsors/BK21_logo.jpg" alt="" width="250px" /></div>
-<div id="text-container"><ul>
-<li><p><b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
+<div id="text-container"><p><b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
 Participant, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
 Pusan National University</p>
-</li>
-</ul>
 </div></div>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  08:12PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 25<sup>th</sup> 2023  10:08AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
