--- a/module.html
+++ b/module.html
@@ -81,21 +81,21 @@ MathJax.Hub.Config({
 <p><div id="Courseworks"></p>
 <h2>Courseworks</h2>
 <ul>
-<li><p>Network Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/~boyd/cvxbook/</a></p>
+<li><p><a href="https://web.stanford.edu/~boyd/cvxbook/" target=&ldquo;blank&rdquo;>Network Optimization</a></p>
 </li>
-<li><p>Game Theory in Wireless and Communication Networks: <a href="http://www2.egr.uh.edu/~zhan2/game_theory_course/" target=&ldquo;blank&rdquo;>http://www2.egr.uh.edu/~zhan2/game_theory_course/</a></p>
+<li><p><a href="http://www2.egr.uh.edu/~zhan2/game_theory_course/" target=&ldquo;blank&rdquo;>Game Theory in Wireless and Communication Networks</a></p>
 </li>
-<li><p>Selected Topics on Optimization: <a href="http://wireless.egr.uh.edu/Optimization/index.htm" target=&ldquo;blank&rdquo;>http://wireless.egr.uh.edu/Optimization/index.htm</a></p>
+<li><p><a href="http://wireless.egr.uh.edu/Optimization/index.htm" target=&ldquo;blank&rdquo;>Selected Topics on Optimization</a></p>
 </li>
-<li><p>Introduction to Deep Learning: <a href="https://courses.d2l.ai/berkeley-stat-157/index.html" target=&ldquo;blank&rdquo;>https://courses.d2l.ai/berkeley-stat-157/index.html</a></p>
+<li><p><a href="https://courses.d2l.ai/berkeley-stat-157/index.html" target=&ldquo;blank&rdquo;>Introduction to Deep Learning</a></p>
 </li>
-<li><p>Introduction to Machine Learning: <a href="http://ee104.stanford.edu/" target=&ldquo;blank&rdquo;>http://ee104.stanford.edu/</a></p>
+<li><p><a href="http://ee104.stanford.edu/" target=&ldquo;blank&rdquo;>Introduction to Machine Learning</a></p>
 </li>
-<li><p>Introduction to Reinforcement Learning: <a href="https://web.stanford.edu/class/cs234/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/class/cs234/</a></p>
+<li><p><a href="https://web.stanford.edu/class/cs234/" target=&ldquo;blank&rdquo;>Introduction to Reinforcement Learning</a></p>
 </li>
-<li><p>Introduction to Applied Linear Algebra: <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/&nbsp;boyd/vmls/</a></p>
+<li><p><a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>Introduction to Applied Linear Algebra</a></p>
 </li>
-<li><p>Machine Learning Specialization: <a href="https://www.coursera.org/specializations/machine-learning-introduction" target=&ldquo;blank&rdquo;>https://www.coursera.org/specializations/machine-learning-introduction</a></p>
+<li><p><a href="https://www.coursera.org/specializations/machine-learning-introduction" target=&ldquo;blank&rdquo;>Machine Learning Specialization</a></p>
 </li>
 </ul>
 <p></div>
@@ -103,19 +103,21 @@ MathJax.Hub.Config({
 <p><div id="Ebooks"></p>
 <h2>Ebooks</h2>
 <ul>
-<li><p>Convex Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/" target=&ldquo;blank&rdquo;>https://web.stanford.edu/&nbsp;boyd/cvxbook/</a></p>
+<li><p><a href="https://web.stanford.edu/~boyd/cvxbook/" target=&ldquo;blank&rdquo;>Convex Optimization</a></p>
 </li>
-<li><p>Reinforcement Learning: <a href="http://www.incompleteideas.net/book/the-book-2nd.html" target=&ldquo;blank&rdquo;>http://www.incompleteideas.net/book/the-book-2nd.html</a></p>
+<li><p><a href="http://www.incompleteideas.net/book/the-book-2nd.html" target=&ldquo;blank&rdquo;>Reinforcement Learning</a></p>
 </li>
-<li><p>Dive into Deep Learning: <a href="https://d2l.ai/" target=&ldquo;blank&rdquo;>https://d2l.ai/</a></p>
+<li><p><a href="https://d2l.ai/" target=&ldquo;blank&rdquo;>Dive into Deep Learning</a></p>
 </li>
-<li><p>Graph Neural Networks: Foundations, Frontiers, and Applications: <a href="https://graph-neural-networks.github.io/index.html" target=&ldquo;blank&rdquo;>https://graph-neural-networks.github.io/index.html</a></p>
+<li><p><a href="https://graph-neural-networks.github.io/index.html" target=&ldquo;blank&rdquo;>Graph Neural Networks: Foundations, Frontiers, and Applications</a></p>
 </li>
-<li><p>Reinforcement Learning and Stochastic Optimization: <a href="https://castlelab.princeton.edu/rlso/" target=&ldquo;blank&rdquo;>https://castlelab.princeton.edu/rlso/</a></p>
+<li><p><a href="https://castlelab.princeton.edu/rlso/" target=&ldquo;blank&rdquo;>Reinforcement Learning and Stochastic Optimization</a></p>
 </li>
-<li><p>Computer Networking: A Top-Down Approach: <a href="https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319" target=&ldquo;blank&rdquo;>https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319</a></p>
+<li><p><a href="https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319" target=&ldquo;blank&rdquo;>Computer Networking: A Top-Down Approach</a></p>
 </li>
-<li><p>Computer Architecture: A Quantitative Approach: <a href="https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X" target=&ldquo;blank&rdquo;>https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X</a></p>
+<li><p><a href="https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X" target=&ldquo;blank&rdquo;>Computer Architecture: A Quantitative Approach</a></p>
+</li>
+<li><p><a href="https://www.amazon.com/6G-Frontiers-Towards-Wireless-Systems/dp/1119862345" target=&ldquo;blank&rdquo;>6G Frontiers: Towards Future Wireless Systems</a></p>
 </li>
 </ul>
 <p></div>
@@ -125,7 +127,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on November 25<sup>th</sup> 2023  10:03AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
