--- a/opendata.html
+++ b/opendata.html
@@ -60,15 +60,15 @@ MathJax.Hub.Config({
 <p><div id="Datasets"></p>
 <h2>Datasets</h2>
 <ul>
-<li><p>Microsoft Malware Classification Challenge (BIG 2015): <a href="https://www.kaggle.com/c/malware-classification/data" target=&ldquo;blank&rdquo;>https://www.kaggle.com/c/malware-classification/data</a></p>
+<li><p><a href="https://www.kaggle.com/c/malware-classification/data" target=&ldquo;blank&rdquo;>Microsoft Malware Classification Challenge (BIG 2015)</a></p>
 </li>
-<li><p>Recordings of Digital and Analog Modulation Types (RadioML): <a href="https://www.deepsig.io/datasets" target=&ldquo;blank&rdquo;>https://www.deepsig.io/datasets</a></p>
+<li><p><a href="https://www.deepsig.io/datasets" target=&ldquo;blank&rdquo;>Recordings of Digital and Analog Modulation Types (RadioML)</a></p>
 </li>
-<li><p>Power Allocation in Multi-cell Massive MIMO: <a href="https://data.ieeemlc.org/Ds2Detail" target=&ldquo;blank&rdquo;>https://data.ieeemlc.org/Ds2Detail</a></p>
+<li><p><a href="https://data.ieeemlc.org/Ds2Detail" target=&ldquo;blank&rdquo;>Power Allocation in Multi-cell Massive MIMO</a></p>
 </li>
-<li><p>IEEE Machine Learning for Communications ETI: <a href="https://mlc.committees.comsoc.org/" target=&ldquo;blank&rdquo;>https://mlc.committees.comsoc.org/</a></p>
+<li><p><a href="https://mlc.committees.comsoc.org/" target=&ldquo;blank&rdquo;>IEEE Machine Learning for Communications ETI</a></p>
 </li>
-<li><p>Drone Remote Controller RF Signal Dataset: <a href="https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset" target=&ldquo;blank&rdquo;>https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset</a>
+<li><p><a href="https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset" target=&ldquo;blank&rdquo;>Drone Remote Controller RF Signal Dataset</a>
 </p>
 </li>
 </ul>
@@ -94,7 +94,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on November 25<sup>th</sup> 2023  10:04AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
