--- a/index.html
+++ b/index.html
@@ -91,8 +91,6 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" targe
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><a href="./COIN/opening.html" target=&ldquo;blank&rdquo;><font color=red size=+0.5><b>Openning!</b></font></a> Applicants are invited to join my COIN-Lab@TCD under the Irish Research Council's Postgraduate/Postdoctoral Programme. </p>
-</li>
 <li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director.</p>
 </li>
 <li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I have been invited to join the editorial board of the IEEE Communications Letters.</p>
@@ -179,7 +177,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on November 25<sup>th</sup> 2023  10:20AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
